--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html
-  class="w-screen min-h-full bg-gradient-to-b from-yellow-200 to-yellow-300"
+  class="w-screen min-h-full"
+  style="
+    background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)),
+      url(./src/assets/milkyWayGalaxy.jpeg);
+  "
   lang="en"
 >
   <head>
@@ -9,11 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
-  <body>
+  <body class="text-gray-100">
     <div id="app" class="flex flex-col w-screen min-h-0 mx-auto"></div>
     <script type="module" src="/src/main.ts"></script>
-    <noscript>
-      
-    </noscript>
+    <noscript> </noscript>
   </body>
 </html>
+
+<!-- class="w-screen min-h-full bg-gradient-to-b from-lime-200 to-lime-300" -->
